# vivid-package-template

./: AUTHORING.md  README.md
multi-operator/: AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
multi-operator/.github/workflows/: smoke.yml
multi-operator/operators/audio/example_audio/: example_audio.cpp
multi-operator/operators/control/example_control/: example_control.cpp
multi-operator/operators/gpu/example_gpu/: example_gpu.cpp
multi-operator/tests/: CMakeLists.txt  test_package_placeholder.cpp
single-operator/: AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
single-operator/.github/workflows/: smoke.yml
single-operator/graphs/: demo.json
single-operator/operators/control/example_op/: example_op.cpp
single-operator/tests/: test_package_placeholder.cpp
